# mres-project

./: .buildinfo  .gitignore  1_Understanding_Context.html  2.1_Initial_Data_Collection_Report.html  2.2_Data_Description_Report.html  2.3_Data_Exploration_Report.html  2.3_Data_Exploration_Report.ipynb  2.4_Data_Quality_Report.html  2.4_Data_Quality_Report.ipynb  3_Data_Preparation.html  4_Modelling.html  4_Modelling_2.html  README.md  eda_helper.py  genindex.html  index.html  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: 1_Understanding_Context.ipynb  2.1_Initial_Data_Collection_Report.ipynb  2.2_Data_Description_Report.ipynb  2.3_Data_Exploration_Report.ipynb  2.4_Data_Quality_Report.ipynb  3_Data_Preparation.ipynb  4_Modelling.ipynb  4_Modelling_2.ipynb
analysis_files/: 1_Understanding_Context.ipynb  2.1_Initial_Data_Collection_Report.ipynb  2.2_Data_Description_Report.ipynb  2.3_Data_Exploration_Report.html  2.3_Data_Exploration_Report.ipynb  2.4_Data_Quality_Report.ipynb  3_Data_Preparation.ipynb  4.1_Baseline.ipynb  4.2_Crossvalidation.ipynb  4.3_Multivariate.ipynb  4_Anomaly_Detection.ipynb  4_Anomaly_Detection_MM.ipynb  4_Anomaly_Detection_MV.ipynb  4_MV_Anomaly_Prediction_Evaluator.ipynb  4_Modelling.ipynb  4_Modelling_2.ipynb  4_Overview.ipynb  4_Performance_Evaluator.ipynb  4_Performance_Evaluator_MM.ipynb  4_UV_Anomaly_Prediction_Evaluator.ipynb  _config.yml  _toc.yml  bibtex.bib  data_clustering.ipynb  dump.py  eda_helper.py  jb_add_labels.py  jb_add_tags.py  lstm_train_metrics.csv  model_training_loop.py  modelling_functions.py  mpl_config.py  multivariate_model_loop.py  references.bib  scrap.csv  univariate_model_loop copy.py  univariate_model_loop.py  univariate_model_workflow.py
analysis_files/_build/html/: .buildinfo  (+13 more)
analysis_files/mv_results/: features11_completeness0.5_ed4_runs5_evaluation_results.csv  features11_completeness0.5_ed6_runs5_evaluation_results.csv
analysis_files/univariate_model_states/: LSTM_TestNumber102_Completeness1_SequenceLength648_Horizon24_WindowSize12.pt  LSTM_TestNumber105_Completeness1_SequenceLength648_Horizon24_WindowSize96.pt  (+855 more)
(+3447 files in other folders)
