[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "mres-project"
version = "0.1.0"
description = "Towards Predictive Situational Awareness of Urban Pedestrian Flows"
readme = "README.md"
authors = [
    {name = "Carrow Morris-Wiltshire", email = "carrow.m.w@gmail.com"},
]
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.11"
dependencies = [
    "asttokens==2.2.1",
    "attrs==23.1.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.12.2",
    "bleach==6.0.0",
    "colorama==0.4.6",
    "comm==0.1.3",
    "contourpy==1.0.7",
    "cycler==0.11.0",
    "debugpy==1.6.7",
    "decorator==5.1.1",
    "defusedxml==3.7.1",
    "docutils==0.20.1",
    "executing==1.2.0",
    "fastjsonschema==2.17.1",
    "fonttools==4.39.4",
    "ipykernel==6.23.1",
    "ipython==8.13.2",
    "jedi==0.18.2",
    "jinja2==3.1.2",
    "joblib==1.2.0",
    "jsonschema==4.17.3",
    "jupyter_client==8.2.0",
    "jupyter_core==5.3.0",
    "jupyterlab-pygments==3.2.2",
    "kiwisolver==1.4.4",
    "markupsafe==2.1.3",
    "matplotlib==3.7.1",
    "matplotlib-inline==0.1.6",
    "mistune==2.0.5",
    "nbclient==3.8.0",
    "nbconvert==7.4.0",
    "nbformat==5.9.0",
    "nest-asyncio==1.5.6",
    "numpy==1.24.3",
    "packaging==23.1",
    "pandas==2.0.2",
    "pandocfilters==1.5.0",
    "parso==0.8.3",
    "pickleshare==0.7.5",
    "Pillow==9.5.0",
    "platformdirs==3.5.1",
    "prompt-toolkit==3.0.38",
    "psutil==5.9.5",
    "pure-eval==0.2.2",
    "Pygments==2.15.1",
    "pyparsing==3.0.9",
    "pyrsistent==3.19.3",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "pywin32==306",
    "pyzmq==25.1.0",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "seaborn==0.12.2",
    "six==1.16.0",
    "soupsieve==2.4.1",
    "stack-data==0.6.2",
    "tinycss2==1.2.1",
    "threadpoolctl==3.1.0",
    "tornado==6.3.2",
    "traitlets==5.9.0",
    "tzdata==2023.3",
    "wcwidth==0.2.6",
    "webencodings==3.5.1"
]


[tool.setuptools]
packages = ["analysis_files"] # this line specifies the package location